--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -16,7 +16,7 @@
          android:id="@+id/btnAddUser"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
-         android:text="Add user"/>
+         android:text="SignUp"/>
 
         <Button
             android:id="@+id/btnGetUsersList"
